[metadata]
name = 'pyhandlers'
version = '0.0.1'
description = 'various utility/helper functions & decorators.'
author = 'Bharath G.S'
author_email = 'royalkingpin@gmail.com'
license = 'MIT'
url = 'https://github.com/bharathgs/pyhandlers'

[requires]
python_version = ['3.6']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
